Feature: List tasks by date
